# bitbacktest

./: .gitignore  .replit  .travis.yml  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  build.py  combined_output.py  pyproject.toml  requirements.txt  requirements_dev.txt  tox.ini
.github/: ISSUE_TEMPLATE.md
app/: README.md  _lambda_base.py  _template.yaml  build_all.py  build_cloud_formation.py  build_lambda_src.py
app/aws_build/: README.md  _lambda_base.py  _template.yaml  build_all.py  build_cloud_formation.py  build_lambda_src.py
app/gas/: gas.js
dev_memo/: backtest_flow.pu
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
example/: backtest.py  backtest_BollingerBands.py  backtest_MACD.py  backtest_MovingAverage.py  backtest_from_Excel.py  bayse_backtest.py  bayse_backtest_BB.py  grid_backtest.py  gridtest.py
src/bitbacktest/: __init__.py  backtester.py  data_generater.py  data_loader.py  market.py  oder.py  strategy.py
src/bitbacktest/develop/: strategy.py  strategy_cust.py
src/bitbacktest/tools/: graph_plot.py
src/bitbacktest/utils/: dynamodb.py
tests/: __init__.py  aws_lambda.py  backtest_MACD_cust_matplotlib.py  backtest_MACD_matplotlib.py  backtest_MovingAverage_mpl.py  test_backtest.py  test_bitbacktest.py  test_develop_MA.py  test_develop_MACD.py  test_develop_MAcust.py  test_develop_graph.py  test_dynamodb.py  test_get_order.py
