[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bitbacktest"
version = "0.1.0"
description = "A package for backtesting Bitcoin trading strategies."
readme = "README.rst"
authors = [
  {name = "Audrey Roy Greenfeld", email = "audreyr@example.com"}
]
maintainers = [
  {name = "Audrey Roy Greenfeld", email = "audreyr@example.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/wooolwoool/bitbacktest/issues"
changelog = "https://github.com/wooolwoool/bitbacktest/blob/master/changelog.md"
homepage = "https://github.com/wooolwoool/bitbacktest"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

